[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gridmind"
version = "0.0.6"
dependencies = ["gymnasium==1.0.0", "matplotlib==3.7.5", "numpy==1.24.4","tqdm>=4.66.5", "dill==0.3.8", "tabulate==0.9.0"]
requires-python = ">= 3.8"
authors=[{name="Falguni Das Shuvo"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Reinforcement Learning", "Temporal Difference", "TD Control","TD Prediction", "SARSA", "Q-Learning", "Monte Carlo", "Monte Carlo Control","Monte Carlo Prediction", "N-Step Methods", "N-Step SARSA", "N-Step TD"]

[project.urls]
Repository = "https://github.com/shuvoxcd01/GridMind.git"

[project.optional-dependencies]
examples=["gymnasium[toy-text]==1.0.0", "rl-worlds==0.0.2"]
fun_app=["torch==2.4.1", "torchinfo==1.8.0"]
all=["torch==2.4.1", "torchinfo==1.8.0", "gymnasium[toy-text]==1.0.0",  "gymnasium[box2d]==1.0.0", "rl-worlds==0.0.2"]